<?xml version="1.0"?>
<package format="2">
  <name>loopback_test</name>
  <version>0.0.0</version>
  <description>The loopback_test package</description>

  <maintainer email="barry.xu@sony.com">Barry Xu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bounded_message</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>bounded_message</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>bounded_message</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
